k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-service
  labels:
    app: hr-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: hr-service
